--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,56 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
+server/node_modules/
 
-# next.js
-/.next/
-/out/
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+server/.env
 
-# production
-/build
+# Build outputs
+.next/
+out/
+dist/
+build/
 
-# debug
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files
-.env*
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# vercel
-.vercel
+# Coverage directory used by tools like istanbul
+coverage/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Render
+.render/
+
+# Lock files (if using different package managers)
+pnpm-lock.yaml
+yarn.lock
