--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "my-v0-project",
+  "name": "hydration-tracker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "server:dev": "cd server && npm run dev",
+    "server:start": "cd server && npm start",
+    "install:all": "npm install && cd server && npm install",
+    "dev:full": "concurrently \"npm run server:dev\" \"npm run dev\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -38,20 +42,14 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "cors": "latest",
     "date-fns": "4.1.0",
-    "dotenv": "latest",
     "embla-carousel-react": "8.5.1",
-    "express": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
-    "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
-    "mongoose": "latest",
     "next": "^14.2.30",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -70,8 +68,12 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^8.2.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
