--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "water-tracker-server",
+  "name": "hydration-tracker-server",
   "version": "1.0.0",
-  "description": "Backend for water intake tracker",
+  "description": "Backend for hydration tracker app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -17,5 +18,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
