--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,10 @@
-{
-  "name": "hydration-tracker-server",
-  "version": "1.0.0",
-  "description": "Backend for hydration tracker app",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required'"
+{"name": "hydration-tracker-server",
+"version": "1.0.0",
+"description": "Backend for hydration tracker app",
+"main": "server.js",
+"scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,11 +13,11 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-}
+    },
+    "devDependencies": {
+      "nodemon": "^3.0.1"
+      },
+      "engines": {
+        "node": ">=18.0.0"
+        }
+        }
