--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.4.2",
     "input-otp": "1.4.1",
+    "latest": "^0.2.0",
     "lucide-react": "^0.294.0",
-    "next": "^14.2.30",
+    "next": "^15.4.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
